unpackaged/main/default/objects/Staging_Object__c/Staging_Object__c.object-meta.xml
<CustomObject>
    <description>Staging object for migrating records by object name</description>
    <label>Staging Object</label>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Staging Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>