unpackaged/main/default/objects/Staging_Object__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Objects</relationshipLabel>
    <relationshipName>Staging_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>