unpackaged/main/default/objects/Staging_Object__c/fields/Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Staging Objects</relationshipLabel>
    <relationshipName>Staging_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>