unpackaged/main/default/objects/Staging_Object__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor offer</fullName>
            </value>
            <value>
                <fullName>Credit Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Item not available</fullName>
            </value>
            <value>
                <fullName>Kitchen In-Home Refund</fullName>
            </value>
            <value>
                <fullName>Lead time</fullName>
            </value>
            <value>
                <fullName>No longer required</fullName>
            </value>
            <value>
                <fullName>Order Entry Error</fullName>
            </value>
            <value>
                <fullName>Order error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Processing Error</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Order Submitted too late</fullName>
            </value>
            <value>
                <fullName>System Cancellation</fullName>
            </value>
            <value>
                <fullName>Credit Request withdrawn by Customer</fullName>
            </value>
            <value>
                <fullName>Pricing Only Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>