unpackaged/main/default/objects/Staging_Object__c/fields/COS_Date__c.field-meta.xml
<CustomField>
    <fullName>COS_Date__c</fullName>
    <label>COS Date</label>
    <type>DateTime</type>
</CustomField>