unpackaged/main/default/objects/Staging_Object__c/fields/COS_ID__c.field-meta.xml
<CustomField>
    <fullName>COS_ID__c</fullName>
    <externalId>true</externalId>
    <label>COS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>