unpackaged/main/default/objects/Staging_Object__c/fields/COS_Number__c.field-meta.xml
<CustomField>
    <fullName>COS_Number__c</fullName>
    <label>COS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>