unpackaged/main/default/objects/Staging_Object__c/fields/COS_Token__c.field-meta.xml
<CustomField>
    <fullName>COS_Token__c</fullName>
    <label>COS Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>