unpackaged/main/default/objects/Staging_Object__c/fields/Created_by_TM_Number__c.field-meta.xml
<CustomField>
    <fullName>Created_by_TM_Number__c</fullName>
    <label>Created by TM Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>