unpackaged/main/default/objects/Staging_Object__c/fields/Customer_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Job_Number__c</fullName>
    <label>Customer Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>