unpackaged/main/default/objects/Staging_Object__c/fields/Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Processed__c</fullName>
    <label>Date Processed</label>
    <type>DateTime</type>
</CustomField>