unpackaged/main/default/objects/Staging_Object__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <label>Delivery Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>