unpackaged/main/default/objects/Staging_Object__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>