unpackaged/main/default/objects/Staging_Object__c/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <label>Function Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>