unpackaged/main/default/objects/Staging_Object__c/fields/Log_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Object_Name__c</fullName>
    <label>Log Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>