unpackaged/main/default/objects/Staging_Object__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Could Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>Submitted Too Late</fullName>
            </value>
            <value>
                <fullName>Order Submitted Too Late</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Job on Hold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Order Entry Error</fullName>
            </value>
            <value>
                <fullName>Pricing Only Quote</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Inferior product</fullName>
            </value>
            <value>
                <fullName>Inadequate fill rate</fullName>
            </value>
            <value>
                <fullName>Not preferred local supplier</fullName>
            </value>
            <value>
                <fullName>Use of Apprentices / job programmes</fullName>
            </value>
            <value>
                <fullName>Unknown / other</fullName>
            </value>
            <value>
                <fullName>Competitor offer</fullName>
            </value>
            <value>
                <fullName>Credit Rejected</fullName>
            </value>
            <value>
                <fullName>Item not available</fullName>
            </value>
            <value>
                <fullName>Kitchen In-Home Refund</fullName>
            </value>
            <value>
                <fullName>Lead time</fullName>
            </value>
            <value>
                <fullName>No longer required</fullName>
            </value>
            <value>
                <fullName>Order error</fullName>
            </value>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Processing Error</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Credit Request withdrawn by Customer</fullName>
            </value>
            <value>
                <fullName>System Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>