unpackaged/main/default/objects/Staging_Object__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Staging Objects</relationshipLabel>
    <relationshipName>Staging_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>