unpackaged/main/default/objects/Staging_Object__c/fields/Owned_by_restricted_team__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_restricted_team__c</fullName>
    <label>Owned by restricted team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>