unpackaged/main/default/objects/Staging_Object__c/fields/Quote_Delivery_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Delivery_Collection_Date__c</fullName>
    <label>Quote Delivery / Collection Date</label>
    <type>Date</type>
</CustomField>