unpackaged/main/default/objects/Staging_Object__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteId</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Staging Objects</relationshipLabel>
    <relationshipName>Staging_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>