unpackaged/main/default/objects/Staging_Object__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Developing Offer</fullName>
            </value>
            <value>
                <fullName>Submission</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal In Progress</fullName>
            </value>
            <value>
                <fullName>Proposal Ready</fullName>
            </value>
            <value>
                <fullName>Presenting</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Tender Won</fullName>
            </value>
            <value>
                <fullName>Tender Lost</fullName>
            </value>
            <value>
                <fullName>Contract Proposal</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Request Pricing</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Contract Won</fullName>
            </value>
            <value>
                <fullName>Contract Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>