unpackaged/main/default/objects/Staging_Object__c/fields/Total_Cost_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_excl_GST__c</fullName>
    <label>Total Cost (excl GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>