unpackaged/main/default/objects/Staging_Object__c/fields/Type_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Delivery__c</fullName>
    <label>Type of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picked by Customer</fullName>
            </value>
            <value>
                <fullName>Customer to Collect</fullName>
            </value>
            <value>
                <fullName>Delivery to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>