unpackaged/main/default/objects/Staging_Object__c/fields/Updated_by_TM_Number__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_TM_Number__c</fullName>
    <label>Updated by TM Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>