unpackaged/main/default/objects/Staging_Object__c/listViews/Staging_Opportunities.listView-meta.xml
<ListView>
    <fullName>Staging_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>COS_Opportunity_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Staging Opportunities</label>
</ListView>