unpackaged/main/default/objects/Staging_Object__c/listViews/Staging_Order.listView-meta.xml
<ListView>
    <fullName>Staging_Order</fullName>
    <columns>NAME</columns>
    <columns>COS_Number__c</columns>
    <columns>Object_Name__c</columns>
    <columns>COS_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Order</value>
    </filters>
    <label>Staging Order</label>
</ListView>