unpackaged/main/default/objects/Staging_Object__c/listViews/Staging_Quote.listView-meta.xml
<ListView>
    <fullName>Staging_Quote</fullName>
    <columns>NAME</columns>
    <columns>COS_Number__c</columns>
    <columns>Object_Name__c</columns>
    <columns>COS_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Quote</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>With Error</value>
    </filters>
    <label>Staging Quote</label>
</ListView>