unpackaged/main/default/objects/Staging_Object__c/listViews/With_Error.listView-meta.xml
<ListView>
    <fullName>With_Error</fullName>
    <columns>NAME</columns>
    <columns>Batch_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>With Error</label>
</ListView>